<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">kit305assig02</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="new_raffle_name">New Raffle Name</string>
    <string name="max_tickets">Max Tickets</string>
    <string name="new_raffle">New Raffle</string>
    <string name="ticket_limit">Ticket Limit</string>
    <string name="create_raffle">Create Raffle</string>
    <string name="description">Description</string>
    <string name="set_max_tickets">Set Max Tickets</string>
    <string name="set_ticket_price">Set Ticket Price</string>
    <string name="update_details">Update Details</string>
    <string name="delete_raffle">Delete Raffle</string>
    <string name="new_ticket">New Ticket</string>
    <string name="name">Name</string>
    <string name="Email">email</string>
    <string name="email">Email</string>
    <string name="create_ticket">create ticket</string>
    <string name="phone">Phone</string>
    <string name="how_many_tickets">How many tickets?</string>
    <string name="tickets">Tickets</string>
    <string name="update_raffle">update raffle</string>
    <string name="update_raffle_details">Update Raffle Details</string>
    <string name="raffle_name">Raffle Name</string>
    <string name="View_Tickets" />
    <string name="Draw_Raffle" />
    <string name="draw_raffle">Draw Raffle</string>
    <string name="view_tickets">View Tickets</string>
    <string name="draw">Draw Raffle</string>
    <string name="winners_name">Winners Name</string>
    <string name="save_and_close_raffle">Save and Close Raffle</string>
    <string name="add_image">Add Image</string>
    <string name="load_picture">Load Picture</string>
    <string name="selectpicture">selectPicture</string>
    <string name="select_image">Select Image</string>
    <string name="save_image">Save Image</string>
    <string name="raffle_image">Raffle Image</string>
    <string name="share">share</string>
    <string name="edit_ticket">Edit</string>
    <string name="update_ticket">Update Ticket</string>
    <string name="price">Price</string>
    <string name="hide_duplicates">Hide Duplicates</string>
</resources>
