<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutRaffleDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RaffleDetails$NewRaffle">

    <ImageView
        android:id="@+id/imgRaffle"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:contentDescription="@string/raffle_image"
        tools:src="@tools:sample/avatars" />

    <!--<TextView
        android:id="@+id/lblRaffleName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:clickable="false"
        android:focusable="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Raffle Name" />-->

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginBottom="30dp"
        android:clickable="false"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="false"
        android:textSize="20sp"
        tools:text="Description" />

    <TextView
        android:id="@+id/lblPrice"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:textSize="20sp"
        tools:text="Ticket Price" />

    <TextView
        android:id="@+id/lblRaffleStatus"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textSize="20sp"
        tools:text="Raffle Status" />

    <Button
        android:id="@+id/btnUpdateDetails"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/update_details" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/delete_raffle" />

    <Button
        android:id="@+id/btnNewTicket"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/new_ticket" />


</LinearLayout>